--- a/projects/ngx-braintree/package.json
+++ b/projects/ngx-braintree/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ngx-braintree",
+  "name": "@douleutarasgr/ngx-braintree",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^8.2.4",
+    "@angular/core": "^8.2.4"
   }
 }
