--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
+    "build": "ng-packagr -p projects/ngx-braintree/package.json",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -22,14 +23,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.7",
-    "@angular-devkit/build-ng-packagr": "~0.6.1",
     "@angular-devkit/build-angular": "~0.6.1",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
+    "@angular-devkit/build-ng-packagr": "~0.6.1",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -42,8 +39,12 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^5.5.0",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
