--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 language: node_js
 node_js:
   - "8"
+before_script:
+  - npm install
 before_deploy:
   - cd projects/ngx-braintree/dist
 deploy:
