--- a/projects/ngx-braintree/package.json
+++ b/projects/ngx-braintree/package.json
@@ -1,8 +1,15 @@
 {
+  "$schema": "../../node_modules/ng-packagr/package.schema.json",
+  "dest": "../../dist",
   "name": "@douleutarasgr/ngx-braintree",
   "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^8.2.4",
     "@angular/core": "^8.2.4"
+  },
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/public_api.ts"
+    }
   }
 }
